Bug 1707242 - part1 : use empty image in null video data. r=bryce

Using a non-null image can prevent element from changing its ready state incorrectly to `HAVE_METADATA`. See more detailed analysis in [1].

[1] https://bugzilla.mozilla.org/show_bug.cgi?id=1707242#c9

Differential Revision: https://phabricator.services.mozilla.com/D114005